0.2.1 Header z-index correction

--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -4,7 +4,7 @@ header.header {
   height: 120px;
   position: sticky;
   top: 0;
-  z-index: 99998;
+  z-index: 100;
   background-color: $colorBackgroundW;
 
   .row {
